[gd_scene load_steps=130 format=3 uid="uid://ddbjuq6kje4v"]

[ext_resource type="Script" uid="uid://rbk7vxnpn2vu" path="res://Player/playerScript.gd" id="1_q3lat"]
[ext_resource type="Script" uid="uid://cs7xaiauydde0" path="res://Player/camera_2d.gd" id="2_dm7nj"]
[ext_resource type="Texture2D" uid="uid://ct3s2rqwyy2l" path="res://Assets/CowboyWizard/CW-DodgeRoll-Left.png" id="3_5wa8t"]
[ext_resource type="Shader" uid="uid://tyth67c55r2" path="res://Player/PlayerShader.gdshader" id="4_3mea3"]
[ext_resource type="Texture2D" uid="uid://dhkl0dil0g4bf" path="res://Assets/CowboyWizard/CW-DodgeRoll-Right.png" id="4_p7tob"]
[ext_resource type="Texture2D" uid="uid://bhy83ufvgxxto" path="res://Assets/TheFuckener.png" id="6_6ysni"]
[ext_resource type="Texture2D" uid="uid://biqd4dk0unbyk" path="res://Assets/CowboyWizard/CW-Idle-Left.png" id="6_s1rgi"]
[ext_resource type="Texture2D" uid="uid://vxwuwdy7qnm4" path="res://Assets/CowboyWizard/CW-Idle-Right.png" id="6_vlldt"]
[ext_resource type="Texture2D" uid="uid://bul1epqs6ty3l" path="res://Assets/CowboyWizard/CW-Run-TopLeft.png" id="7_j23h2"]
[ext_resource type="Texture2D" uid="uid://dg761dhc7o86w" path="res://Assets/CowboyWizard/CW-Run-TopRight.png" id="8_0j2ni"]
[ext_resource type="Texture2D" uid="uid://1p42dt6x11py" path="res://Assets/CowboyWizard/CW-Run-Left.png" id="8_j23h2"]
[ext_resource type="Texture2D" uid="uid://c1dp1ud40046h" path="res://Assets/CowboyWizard/CW-Run-Right.png" id="9_0j2ni"]
[ext_resource type="Texture2D" uid="uid://c8q10any1e6h4" path="res://Assets/CowboyWizard/CW-Spellcast-Left.png" id="10_v0k0e"]
[ext_resource type="Texture2D" uid="uid://dfdp64xswe5ls" path="res://Assets/CowboyWizard/CW-Spellcast-Right.png" id="11_5wa8t"]
[ext_resource type="Script" uid="uid://cl2jnv30lohdj" path="res://Player/health_bar.gd" id="13_p7tob"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vlldt"]
radius = 14.0
height = 58.0

[sub_resource type="Gradient" id="Gradient_5wa8t"]
offsets = PackedFloat32Array(0, 0.14, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0866667, 0.0866667, 0.0866667, 1, 1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7v5gs"]
shader = ExtResource("4_3mea3")
shader_parameter/flash_strength = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_c5st5"]
atlas = ExtResource("3_5wa8t")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6x1a"]
atlas = ExtResource("3_5wa8t")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt36k"]
atlas = ExtResource("3_5wa8t")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqyul"]
atlas = ExtResource("3_5wa8t")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6d7k2"]
atlas = ExtResource("3_5wa8t")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v513r"]
atlas = ExtResource("3_5wa8t")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vwdf"]
atlas = ExtResource("3_5wa8t")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8ub3"]
atlas = ExtResource("3_5wa8t")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyr7x"]
atlas = ExtResource("3_5wa8t")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e2fr"]
atlas = ExtResource("3_5wa8t")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3om3i"]
atlas = ExtResource("3_5wa8t")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4k38o"]
atlas = ExtResource("3_5wa8t")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sos5"]
atlas = ExtResource("3_5wa8t")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlc46"]
atlas = ExtResource("3_5wa8t")
region = Rect2(416, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5tgw"]
atlas = ExtResource("4_p7tob")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_es2bh"]
atlas = ExtResource("4_p7tob")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fquw"]
atlas = ExtResource("4_p7tob")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmo2g"]
atlas = ExtResource("4_p7tob")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b21l2"]
atlas = ExtResource("4_p7tob")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbrgp"]
atlas = ExtResource("4_p7tob")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bowsq"]
atlas = ExtResource("4_p7tob")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ubne"]
atlas = ExtResource("4_p7tob")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8rh1"]
atlas = ExtResource("4_p7tob")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5ns6"]
atlas = ExtResource("4_p7tob")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81f5t"]
atlas = ExtResource("4_p7tob")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxjty"]
atlas = ExtResource("4_p7tob")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lhl8"]
atlas = ExtResource("4_p7tob")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ygm5"]
atlas = ExtResource("4_p7tob")
region = Rect2(416, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v5gs"]
atlas = ExtResource("6_s1rgi")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8sa4y"]
atlas = ExtResource("6_s1rgi")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nb2p"]
atlas = ExtResource("6_s1rgi")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7xyo"]
atlas = ExtResource("6_s1rgi")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evw08"]
atlas = ExtResource("6_s1rgi")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_roy6y"]
atlas = ExtResource("6_s1rgi")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5tep"]
atlas = ExtResource("6_s1rgi")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps8ct"]
atlas = ExtResource("6_s1rgi")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1rgi"]
atlas = ExtResource("6_vlldt")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j23h2"]
atlas = ExtResource("6_vlldt")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j2ni"]
atlas = ExtResource("6_vlldt")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0k0e"]
atlas = ExtResource("6_vlldt")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wa8t"]
atlas = ExtResource("6_vlldt")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7tob"]
atlas = ExtResource("6_vlldt")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm7nj"]
atlas = ExtResource("6_vlldt")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mea3"]
atlas = ExtResource("6_vlldt")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uipr"]
atlas = ExtResource("8_j23h2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yifbt"]
atlas = ExtResource("8_j23h2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0mko"]
atlas = ExtResource("8_j23h2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqjia"]
atlas = ExtResource("8_j23h2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x70vp"]
atlas = ExtResource("8_j23h2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo5nf"]
atlas = ExtResource("8_j23h2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_croik"]
atlas = ExtResource("8_j23h2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgaaw"]
atlas = ExtResource("8_j23h2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3fu"]
atlas = ExtResource("9_0j2ni")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu7fl"]
atlas = ExtResource("9_0j2ni")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78fhc"]
atlas = ExtResource("9_0j2ni")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n5ed"]
atlas = ExtResource("9_0j2ni")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf47d"]
atlas = ExtResource("9_0j2ni")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvfa1"]
atlas = ExtResource("9_0j2ni")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib3vm"]
atlas = ExtResource("9_0j2ni")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtj8b"]
atlas = ExtResource("9_0j2ni")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cyal"]
atlas = ExtResource("7_j23h2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4hlt"]
atlas = ExtResource("7_j23h2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wdt0"]
atlas = ExtResource("7_j23h2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqhi1"]
atlas = ExtResource("7_j23h2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjbnu"]
atlas = ExtResource("7_j23h2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wef8"]
atlas = ExtResource("7_j23h2")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb1oy"]
atlas = ExtResource("7_j23h2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3e2x5"]
atlas = ExtResource("7_j23h2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_00hy0"]
atlas = ExtResource("8_0j2ni")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr4jq"]
atlas = ExtResource("8_0j2ni")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr648"]
atlas = ExtResource("8_0j2ni")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efsdk"]
atlas = ExtResource("8_0j2ni")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2bo2"]
atlas = ExtResource("8_0j2ni")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ht5j"]
atlas = ExtResource("8_0j2ni")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnee"]
atlas = ExtResource("8_0j2ni")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fycm6"]
atlas = ExtResource("8_0j2ni")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqaa0"]
atlas = ExtResource("10_v0k0e")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1b5h"]
atlas = ExtResource("10_v0k0e")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w4lt"]
atlas = ExtResource("10_v0k0e")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww5s2"]
atlas = ExtResource("10_v0k0e")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw4su"]
atlas = ExtResource("10_v0k0e")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2ho1"]
atlas = ExtResource("10_v0k0e")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eennk"]
atlas = ExtResource("10_v0k0e")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyr8h"]
atlas = ExtResource("10_v0k0e")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i325y"]
atlas = ExtResource("10_v0k0e")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu7rt"]
atlas = ExtResource("10_v0k0e")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm06d"]
atlas = ExtResource("10_v0k0e")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhfjx"]
atlas = ExtResource("10_v0k0e")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kveqs"]
atlas = ExtResource("10_v0k0e")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3djb"]
atlas = ExtResource("10_v0k0e")
region = Rect2(416, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lre2g"]
atlas = ExtResource("10_v0k0e")
region = Rect2(448, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a3po"]
atlas = ExtResource("11_5wa8t")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r04tr"]
atlas = ExtResource("11_5wa8t")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuo2u"]
atlas = ExtResource("11_5wa8t")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8agqw"]
atlas = ExtResource("11_5wa8t")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ustk3"]
atlas = ExtResource("11_5wa8t")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ylbe"]
atlas = ExtResource("11_5wa8t")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqgfh"]
atlas = ExtResource("11_5wa8t")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e03cv"]
atlas = ExtResource("11_5wa8t")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xehjw"]
atlas = ExtResource("11_5wa8t")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_27xwf"]
atlas = ExtResource("11_5wa8t")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_808i2"]
atlas = ExtResource("11_5wa8t")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kde38"]
atlas = ExtResource("11_5wa8t")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fam5e"]
atlas = ExtResource("11_5wa8t")
region = Rect2(384, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ufoc"]
atlas = ExtResource("11_5wa8t")
region = Rect2(448, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wb44"]
atlas = ExtResource("11_5wa8t")
region = Rect2(416, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7v5gs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5st5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6x1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt36k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqyul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6d7k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v513r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vwdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8ub3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyr7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e2fr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3om3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k38o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sos5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlc46")
}],
"loop": true,
"name": &"DodgeRollLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5tgw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_es2bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fquw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmo2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b21l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbrgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bowsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ubne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8rh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5ns6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81f5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxjty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lhl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ygm5")
}],
"loop": true,
"name": &"DodgeRollRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_7v5gs")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_8sa4y")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3nb2p")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_d7xyo")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_evw08")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_roy6y")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_u5tep")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ps8ct")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_s1rgi")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_j23h2")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_0j2ni")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_v0k0e")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_5wa8t")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_p7tob")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_dm7nj")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3mea3")
}],
"loop": true,
"name": &"IdleRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uipr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yifbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0mko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqjia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x70vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo5nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_croik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgaaw")
}],
"loop": true,
"name": &"RunBottomLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu7fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78fhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n5ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf47d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvfa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib3vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtj8b")
}],
"loop": true,
"name": &"RunBottomRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cyal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4hlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wdt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqhi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjbnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wef8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb1oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3e2x5")
}],
"loop": true,
"name": &"RunTopLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00hy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr4jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr648")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efsdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2bo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ht5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fycm6")
}],
"loop": true,
"name": &"RunTopRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqaa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1b5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w4lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww5s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw4su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2ho1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eennk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyr8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i325y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu7rt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm06d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhfjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kveqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3djb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lre2g")
}],
"loop": true,
"name": &"SpellcastLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a3po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r04tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuo2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8agqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ustk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ylbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqgfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e03cv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xehjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27xwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_808i2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kde38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fam5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ufoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wb44")
}],
"loop": true,
"name": &"SpellcastRight",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dm7nj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3mea3"]
bg_color = Color(0.941231, 0.401231, 0.40493, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7v5gs"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sa4y"]
bg_color = Color(0.942823, 0.942823, 0.942823, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_q3lat")
acceleration = 100.0
friction = 50
max_speed = 1000.0

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_vlldt")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("2_dm7nj")
shakeFade = 2.0

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(29, 0)
texture = ExtResource("6_6ysni")

[node name="Marker2D" type="Marker2D" parent="WeaponPivot/WeaponSprite"]
position = Vector2(26, -3)

[node name="WeaponParticles" type="CPUParticles2D" parent="WeaponPivot"]
z_index = -1
position = Vector2(16, -3)
emitting = false
amount = 16
lifetime = 0.2
one_shot = true
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
orbit_velocity_min = -0.01
orbit_velocity_max = 10.0
color = Color(0.86611, 0.0917685, 0.180119, 1)
color_ramp = SubResource("Gradient_5wa8t")

[node name="FireCooldown" type="Timer" parent="."]
wait_time = 0.025
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7v5gs")
sprite_frames = SubResource("SpriteFrames_7v5gs")
animation = &"IdleRight"
autoplay = "RunBottomRight"

[node name="ShrineLabel" type="Label" parent="."]
offset_left = -20.0
offset_top = -52.0
offset_right = 20.0
offset_bottom = -29.0

[node name="SwapCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DodgeCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlayerUI" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="PlayerUI"]
z_index = 4
offset_left = 17.0
offset_top = 15.0
offset_right = 322.0
offset_bottom = 46.0
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxEmpty_dm7nj")
theme_override_styles/fill = SubResource("StyleBoxFlat_3mea3")
value = 60.0
show_percentage = false
script = ExtResource("13_p7tob")

[node name="DamageBar" type="ProgressBar" parent="PlayerUI/HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7v5gs")
theme_override_styles/fill = SubResource("StyleBoxFlat_8sa4y")
value = 80.0
show_percentage = false

[node name="DamageDelayTimer" type="Timer" parent="PlayerUI/HealthBar"]
wait_time = 0.4
one_shot = true

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="health_changed" from="." to="PlayerUI/HealthBar" method="_on_player_health_changed"]
[connection signal="timeout" from="FireCooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="SwapCooldown" to="." method="_on_swap_cooldown_timeout"]
[connection signal="timeout" from="DodgeCooldown" to="." method="_on_dodge_cooldown_timeout"]
[connection signal="timeout" from="PlayerUI/HealthBar/DamageDelayTimer" to="PlayerUI/HealthBar" method="_on_damage_delay_timer_timeout"]
[connection signal="timeout" from="IFrameTimer" to="." method="_on_i_frame_timer_timeout"]
